--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>react-full-stack-start</title>
 	</head>
 	<body>
-	  <div id='root'></div>
+		<div id='root'></div>
+		<script src="dll/vendor.js"></script>
 	</body>
 </html>
